welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: ';' expected but '{' found.
  while (num1 >0) {
                  ^